--- a/sass/layout/_sidebar-content.scss
+++ b/sass/layout/_sidebar-content.scss
@@ -96,12 +96,7 @@ body {
 }
 
 @media screen and (min-width: 1160px) and (max-width: 1539px) {
-    .content-area {
-        width: 100%;
-        float: right;
-        margin-right: -380px;
-        padding-right: 380px;
-    }
+    
     
     .entry-header,
     .entry-content,
