--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -1,9 +1,16 @@
 
 @media screen and (min-width: 1160px){
+    .home, 
+    .archive {
+        .content-area {
+            width: 100%;
+            float: right;
+            margin-left: -380px;
+            padding-left: 380px;
+        }
+       
+    }//  .HOME, .ARCHIVE
     .single-post {
-        #secondary {
-            position: fixed;
-        }// #secondary
         .content-area {
             padding-right: 0;
             margin-right: 0;
@@ -11,17 +18,17 @@
             max-width: 100%;
             float: left;
             }
-            .site-main {
-            padding-right: 0;
+        .site-main {
+            padding-left: 380px;
             margin-right: 0;
-            margin-left: 380px;
             max-width: 100%;
-            float: left;
-            }
-
-
-
+            
+        }
+         #secondary {
+            position: fixed;
+        }// #secondary
     }// .single-post
+
 }
 .related_posts {
     position: relative;
